# codespace-features

./: .copilot-instructions.md  .devcontainer.json  README.md  SUPPORT.md
.github/workflows/: release-keyring.yaml  release.yaml  test-all.yaml  test-keyring.yaml  test-pr.yaml
src/artifacts-helper/: NOTES.md  README.md  devcontainer-feature.json  install.sh  run-dotnet.sh  run-nuget-sh
src/artifacts-helper/codespaces_artifacts_helper_keyring/: .gitignore  README.md  noxfile.py  pyproject.toml
src/artifacts-helper/codespaces_artifacts_helper_keyring/src/codespaces_artifacts_helper_keyring/: __init__.py  artifacts_helper_credential_provider.py  artifacts_helper_wrapper.py  keyring_backend.py
src/artifacts-helper/codespaces_artifacts_helper_keyring/tests/: test_artifacts_helper_credential_provider.py  test_artifacts_helper_wrapper.py  test_backend.py  test_keyring_backend.py
src/artifacts-helper/scripts/: auth-ado.sh  az  az.sh  dotnet  executable-wrapper-template.sh  install-provider.sh  install-python-keyring.sh  npm  npx  nuget  pnpm  pnpx  resolve-shim.sh  run-dotnet.sh  run-npm.sh  run-npx.sh  run-nuget.sh  run-pnpm.sh  run-pnpx.sh  run-rush-pnpm.sh  run-rush.sh  run-yarn.sh  rush  rush-pnpm  write-npm.sh  yarn
src/devtool/: NOTES.md  README.md  devcontainer-feature.json  install.sh
src/docfx/: NOTES.md  README.md  devcontainer-feature.json  install.sh
src/external-repository/: NOTES.md  README.md  devcontainer-feature.json  install-gcm.sh  install.sh
src/external-repository/scripts/: ado-git.config  clone.sh  commit-msg.sh  external-git  gcm-git.config  prebuild-git.config  run-dotnet.sh  setup-user.sh  usersecret-git.config  variables.sh
src/go/: NOTES.md  README.md  devcontainer-feature.json  install.sh
src/microsoft-git/: NOTES.md  README.md  cron-init.sh  devcontainer-feature.json  install.sh
test/_global/: debian_tests.sh  mariner_tests.sh  scenarios.json  ubuntu_tests.sh
test/artifacts-helper/: README.md  check_python_and_keyring.sh  python38_and_keyring_ubuntu.sh  python_and_no_keyring.sh  run-tests.sh  scenario_executable_wrapper.sh  scenarios.json  test.sh  test_auth_wait.sh  test_az_shim.sh  test_fallback_execution.sh  test_non_root_install.sh  test_shim_integration.sh
test/devtool/: test.sh
test/docfx/: test.sh
test/external-repository/: README.md  basic-install.sh  branch-install.sh  multi-install.sh  options-install.sh  scalar-basic.sh  scalar-folder.sh  scalar-no-src.sh  scenarios.json  sparse-test.sh  telemetry-email.sh  telemetry-msg.sh  telemetry-name.sh  test.sh
test/go/: install_go_tool_in_postCreate.sh  install_go_twice.sh  install_mariner.sh  scenarios.json
test/microsoft-git/: explicit_prerelease.sh  latest_stable.sh  multi_digit_vfs.sh  old_noarch_deb.sh  scenarios.json  test.sh
