[project]
name = "codespaces-artifacts-helper-keyring"
version = "0.1.0"
description = "Keyring backend to retrieve credentials for Azure Artifacts on Codespaces using https://github.com/microsoft/ado-codespaces-auth"
authors = [{ name = "Delilah Wu", email = "delilahwu@microsoft.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = [
    "jaraco-classes>=3.0.0",
    "keyring>=20.0.0",
    "requests>=2.20.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }

[project.entry-points."keyring.backends"]
CodespacesArtifactsHelperKeyringBackend = "codespaces_artifacts_helper_keyring"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"codespaces_artifacts_helper_keyring" = ["py.typed"]

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
lint = ["mypy>=1.9.0", "ruff>=0.4.0", "pre-commit>=3.5.0"]
dev = ["pip>=24.0", "nox>=2024.4.15"]
test = ["pytest>=8.1.1", "pytest-cov>=5.0.0"]
stubs = ["types-requests>=2.31.0.20240406"]

[tool.pdm.scripts]
check = "ruff check ."
fmt = "ruff format ."
test = "pytest -v tests"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
extend-select = ["B", "C4", "D", "E", "F", "I", "W", "Q"]
ignore = ["D102"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"noxfile.py" = ["D1"]
"**/{tests,docs,tools}/*" = ["D1", "E402"]
